--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     testImplementation "io.mockk:mockk:1.13.8"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
     testImplementation "org.jetbrains.kotlin:kotlin-test:1.9.24"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
 
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
