--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.devtools.ksp' version '1.9.24-1.0.20'
 }
 
 android {
@@ -53,17 +52,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
-    implementation "androidx.room:room-runtime:2.6.1"
-    implementation "androidx.room:room-ktx:2.6.1"
-
-    ksp "androidx.room:room-compiler:2.6.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:latest'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.google.code.gson:gson:2.10.1'
     testImplementation "io.mockk:mockk:1.13.8"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
-    testImplementation "org.jetbrains.kotlin:kotlin-test:1.9.24"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:latest"
+    testImplementation "org.jetbrains.kotlin:kotlin-test:latest"
 
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
