--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,9 @@ dependencies {
     testImplementation "io.mockk:mockk:1.13.8"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:latest"
     testImplementation "org.jetbrains.kotlin:kotlin-test:latest"
+    testImplementation("org.robolectric:robolectric:4.16")
 
+    androidTestImplementation("androidx.test:core:1.5.0")
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
