--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,12 @@ android {
 }
 tasks.withType(Test) {
     testLogging {
-        events "failed", "standardOut", "standardError"//, "started", "passed", "skipped"
+        events "failed", "skipped"//, "standardOut", "standardError", "passed", "started" 
+        exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
+        showStandardStreams = true
+        showExceptions = true
+        showCauses = true
+        showStackTraces = true
     }
 }
 dependencies {
