--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     androidTestImplementation("androidx.test:core:1.5.0")
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:latest"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test:1.9.10"
 }
 
 // Custom task to convert YAML to Android strings
