🏗️ do not split languages in bundles
we need them to be able to change

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    bundle {
+        language {
+            // Because user may change the language, all should be present
+            enableSplit = false
+        }
+    }
 
     buildTypes {
         release {
