💄 Several fixes on launcher icon
- Generate for minsdk 24 (still raster icons are generated)
- Round corners on non rounded backgrounds (lint says not all pixels painted)
- Generated monochrome layer and used in adaptative icons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,17 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Carburoid"
         tools:targetApi="31">
 
+        <!-- Android 12+ themed icon declaration -->
+        <meta-data
+            android:name="android.graphics.drawable.themedIcon"
+            android:resource="@mipmap/ic_launcher_themed" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTask"
