--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,13 +67,13 @@ tasks.withType(Test) {
 }
 dependencies {
     implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'com.google.android.material:material:1.13.0'
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
-    implementation 'androidx.preference:preference:1.2.1'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.4'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
@@ -86,9 +86,9 @@ dependencies {
     testImplementation "org.jetbrains.kotlin:kotlin-test:latest"
     testImplementation "org.robolectric:robolectric:4.16"
 
-    androidTestImplementation "androidx.test:core:1.5.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation "androidx.test:core:1.7.0"
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:latest"
-    androidTestImplementation "org.jetbrains.kotlin:kotlin-test:1.9.10"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test:1.9.24"
 }
