--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,5 +36,5 @@ jobs:
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: app-debug.apk
+        name: Carburoid-debug.apk
         path: app/build/outputs/apk/debug/app-debug.apk
