--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
 
         <activity
             android:name=".SettingsActivity"
-            android:label="Settings"
+            android:label="@string/menu_settings"
             android:parentActivityName=".MainActivity" />
 
         <activity
