--- a/tools/net.canvoki.carburoid.yml
+++ b/tools/net.canvoki.carburoid.yml
@@ -1,17 +1,18 @@
 Categories:
-- Location Tracker & Sharer
-- Money
-- Navigation
-- Public Transport
+  - Location Tracker & Sharer
+  - Money
+  - Navigation
+  - Public Transport
 License: AGPL-3.0-or-later
-AuthorName: David Garcia Garzón
-AuthorEmail: fdroid@canvoki.net
+AuthorName: David García Gazón
+AuthorEmail: voki@canvoki.net
 AuthorWebSite: https://canvoki.net/coder
 WebSite: https://github.com/vokimon/carburoid
 SourceCode: https://github.com/vokimon/carburoid
 IssueTracker: https://github.com/vokimon/carburoid/issues
 Translation: https://hosted.weblate.org/projects/carburoid/
 Changelog: https://github.com/vokimon/carburoid/blob/HEAD/CHANGES.md
+
 Name: Carburoid
 Summary: Find Spanish gas stations by price and distance.
 Description: |+
