--- a/tools/net.canvoki.carburoid.yml
+++ b/tools/net.canvoki.carburoid.yml
@@ -15,7 +15,7 @@ Changelog: https://github.com/vokimon/carburoid/blob/HEAD/CHANGES.md
 AutoName: Carburoid
 RepoType: git
 Repo: https://github.com/vokimon/carburoid.git
-Binaries: https://github.com/vokimon/carburoid/releases/download/carburoid-%v/Carburoid-%v-floss-debug.apk
+Binaries: https://github.com/vokimon/carburoid/releases/download/carburoid-%v/net.canvoki.carburoid-%v-floss-release.apk
 Builds:
 - versionName: 1.0.1
   versionCode: 1000100
