🏗️ striping out propietary dependency info by G

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,11 @@ android {
             )
         }
     }
+    // Dependencies info is encrypted Google only to read block
+    dependenciesInfo {
+        includeInApk = false // APK
+        includeInBundle = false // AAB
+    }
 }
 
 tasks.withType(Test) {
