--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,13 +72,25 @@
                 <data android:scheme="geo" />
             </intent-filter>
 
-            <!-- View http uri to a mapping service -->
-            <intent-filter android:autoVerify="true">
+            <!-- Follow google maps links -->
+            <intent-filter android:autoVerify="false">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="https" android:host="www.google.com" android:pathPrefix="/maps/dir/" />
-                <data android:scheme="https" android:host="www.openstreetmap.org" />
+
+                <data android:scheme="https" />
+                <data android:host="www.google.com" />
+                <data android:pathPrefix="/maps/dir/" />
+            </intent-filter>
+
+            <!-- Follow osm links -->
+            <intent-filter android:autoVerify="false">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="https" />
+                <data android:host="www.openstreetmap.org" />
             </intent-filter>
 
         </activity>
