--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: "✨ Feature request"
 description: Suggest an idea for Carburoid
-title: "Feature: [brief description]"
+title: "✨ Feature: [brief description]"
 labels: [enhancement]
 assignees: []
 body:
