📝 fixes in issue template and changes

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -9,10 +9,11 @@ body:
   attributes:
     value: |
       Thanks for taking the time to report a bug!
+
       Please fill out the following details to help us diagnose the issue.
 
       Using English is encouraged, but any language spoken in Spain is welcome.
-      Maintainters might translate the title or add an english summary to your request if you don't.
+      Maintainters might translate the title or add an english summary for you if you don't.
 - type: dropdown
   id: app-version
   attributes:
