--- a/.editorconfig
+++ b/.editorconfig
@@ -10,9 +10,11 @@ ij_kotlin_packages_to_use_import_on_demand = unset
 indent_size = 4
 indent_style = space
 insert_final_newline = true
+max_line_length = 120
 ktlint_code_style = ktlint_official
-ktlint_function_signature_body_expression_wrapping = multiline
-ktlint_function_signature_rule_force_multiline_when_parameter_count_greater_or_equal_than = 2
-ktlint_ignore_back_ticked_identifier = false
-max_line_length = 140
+#ktlint_code_style = android_studio
+#ktlint_function_signature_body_expression_wrapping = multiline
+#ktlint_function_signature_rule_force_multiline_when_parameter_count_greater_or_equal_than = 2
+#ktlint_ignore_back_ticked_identifier = false
 ktlint_standard_comment-spacing = disabled
+#ktlint_standard_type-parameter-comment = disabled
