--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,20 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
-/*
+
 plugins {
-    id "org.jlleitschuh.gradle.ktlint" version "14.0.1" apply false
+    id 'com.diffplug.spotless' version '8.1.0'
 }
-*/
+
+spotless {
+    kotlin {
+        target(
+            'app/src/**/*.kt',
+            'buildSrc/src/**/*.kt',
+        )
+        ktlint('1.7.1')
+    }
+}
 
 allprojects {
     repositories {
@@ -24,4 +33,5 @@ allprojects {
         mavenCentral()
     }
 }
+
 
