--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
-name: "🐛 Bug Report"
+name: "\U0001F41B Bug Report"
 description: Report a reproducible issue or unexpected behavior in Carburoid.
-title: "🐛 Bug: [brief description]"
+title: "\U0001F41B Bug: [brief description]"
 labels:
 - bug
 assignees: []
@@ -20,6 +20,7 @@ body:
     label: App Version
     description: Which version of the app are you using?
     options:
+    - 1.3.0
     - 1.2.3
     - 1.2.2
     - 1.2.1
