🏗️ update groovy old syntax for buildConfig

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ android {
     }
 
     buildFeatures {
-        buildConfig true
+        buildConfig = true
         viewBinding = true
         compose = true
     }
