--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 
 plugins {
     id 'com.diffplug.spotless' version '8.1.0'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.3.0'
 }
 
 spotless {
