--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,6 +160,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.google.code.gson:gson:2.13.2'
+    testImplementation("io.github.java-diff-utils:java-diff-utils:4.12")
     testImplementation 'io.mockk:mockk:1.14.6'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:latest'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:latest'
