--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,13 +145,11 @@ dependencies {
     implementation 'androidx.datastore:datastore-preferences:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.4'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation 'com.squareup.retrofit2:retrofit:3.0.0'
-    implementation 'com.squareup.retrofit2:converter-gson:3.0.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:3.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:latest'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:latest'
     implementation 'org.osmdroid:osmdroid-android:6.1.20'
     implementation 'org.osmdroid:osmdroid-wms:6.1.20'
+    implementation 'com.squareup.okhttp3:okhttp:5.3.2'
     implementation 'io.github.koalaplot:koalaplot-core-android:0.10.4'
     implementation("io.ktor:ktor-client-core:3.4.0")
     implementation("io.ktor:ktor-client-cio:3.4.0")
