--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
 
         <activity
             android:name=".plotnavigator.PlotNavigatorActivity"
-            android:label="@string/menu_settings"
+            android:label="@string/app_name"
             android:parentActivityName=".MainActivity" />
 
         <activity
